--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@veivel/carboncss": "^1.0.7",
     "tailwindcss": "^4.0.9"
   }
 }
